--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: node_js
 node_js:
-  - "0.12"
-before_install: npm install -g grunt-cli
-install: npm install
+  	- "0.12"
+before_install: 
+	- ruby --version
+	- node --version
+install: 
+	- npm install
+after_install:
+	- npm install -g grunt-cli
+	- gem install compass  	
+script:
+	- npm run ci-test
+	- compass compile --force --time --debug-info --config=test/ci-config/.compass.cfg.travis.rb
